--- a/src/app/components/dashboard/almacen/traslado/traslados/traslados.component.html
+++ b/src/app/components/dashboard/almacen/traslado/traslados/traslados.component.html
@@ -1,5 +1,5 @@
 <h2>
-    SUCURSALES
+    SOLICITUDES DE SUCURSALES
 </h2>
     
 <p-table
@@ -9,7 +9,7 @@
         [loading]="loading" responsiveLayout="scroll">
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
-                AUTORIZAR TRASLADOS DE SUCURSALES
+                AUTORIZAR TRASLADOS A SUCURSALES
             </div>
         </ng-template>
         <ng-template pTemplate="header">
@@ -66,7 +66,7 @@
         [loading]="loadingLocal" responsiveLayout="scroll">
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
-                LISTADO DE TRASLADOS DE SUCURSALES
+                LISTADO DE TRASLADOS A SUCURSALES
             </div>
         </ng-template>
         <ng-template pTemplate="header">
