--- a/src/app/components/dashboard/configuraciones/configuracion/configuracion-global/configuracion-global.component.html
+++ b/src/app/components/dashboard/configuraciones/configuracion/configuracion-global/configuracion-global.component.html
@@ -8,7 +8,7 @@
     </div>
     <br/>
     <h5>Selecciona la cuenta por defecto en donde se registrara el efectivo de los cortes</h5>
-    <h4>Cuenta en efectivo</h4>
+    <h4>Cuenta Bancaria</h4>
     <div class="field-checkbox">
         <p-checkbox [(ngModel)]="checked" [binary]="true" inputId="binary" [ngModelOptions]="{standalone: true}" (onChange)="disableCuentas()"></p-checkbox>
     </div>
