--- a/src/app/components/dashboard/finanzas/caja/caja-corte-list/detalle-corte/detalle-corte.component.html
+++ b/src/app/components/dashboard/finanzas/caja/caja-corte-list/detalle-corte/detalle-corte.component.html
@@ -166,7 +166,7 @@
             </ng-template>
         </p-table>
 
-        <p-table [value]="cuentasPorCobrar" [paginator]="true" [rows]="5" responsiveLayout="scroll" *ngIf="cuentaPorCobrar">
+        <!-- <p-table [value]="cuentasPorCobrar" [paginator]="true" [rows]="5" responsiveLayout="scroll" *ngIf="cuentaPorCobrar">
             <ng-template pTemplate="caption">
                 Cuentas Por Cobrar
             </ng-template>
@@ -198,7 +198,7 @@
                     <td></td>
                 </tr>
             </ng-template>
-        </p-table>
+        </p-table> -->
 
     </p-panel>
 
