--- a/src/app/components/dashboard/reports/almacen-report/views/inventario-report-view/inventario-report-view.component.html
+++ b/src/app/components/dashboard/reports/almacen-report/views/inventario-report-view/inventario-report-view.component.html
@@ -1,5 +1,5 @@
 <h2>Inventario</h2>
-<p-toolbar>
+<p-toolbar *appRole="['ADMIN']">
     <h3 class="titles">Inventario Por Sucursal</h3> <p-button label="Generar" icon="pi pi-plus" class="mr-2"
         (onClick)="ListadoInventarioPorSucursal()"></p-button>
 </p-toolbar>
