--- a/src/app/components/dashboard/reports/reports.component.html
+++ b/src/app/components/dashboard/reports/reports.component.html
@@ -1,5 +1,5 @@
 <h2>Reportes</h2>
-<p-menubar [model]="items" *appRole="['ADMIN']"></p-menubar>
+<p-menubar [model]="items" *appRole="['ADMIN', 'COMPRAS']"></p-menubar>
 <p-card>
     <router-outlet></router-outlet> 
 </p-card>
