--- a/src/app/components/dashboard/ventas/ventas.component.html
+++ b/src/app/components/dashboard/ventas/ventas.component.html
@@ -1,6 +1,6 @@
 
 <h2>Departamento de Ventas</h2>
-<p-menubar [model]="items" *appRole="['ADMIN', 'EMPLEADO']"></p-menubar>
+<p-menubar [model]="items" *appRole="['ADMIN', 'VENTAS']"></p-menubar>
 <p-card>
   <router-outlet></router-outlet>
 </p-card>
