--- a/src/app/components/dashboard/config-system/usuarios/usuario-form/usuarios.component.html
+++ b/src/app/components/dashboard/config-system/usuarios/usuario-form/usuarios.component.html
@@ -1,5 +1,5 @@
 <p-toast position="bottom-center"></p-toast>
-<h2>REGISTRAR ADMIN</h2>
+<h2>REGISTRAR USER</h2>
 <div [formGroup]="usuarioService.form">
     <div formGroupName="empleado">
         <div class="grid p-fluid">
@@ -86,6 +86,11 @@
                 </ng-template>
             </p-dropdown>
             </div>
+        </div>
+        <div class="col-12 md:col-6 lg:col-6 field">
+            <label>Roles</label>
+            <p-multiSelect [options]="roles" defaultLabel="Seleccione los roles" formControlName="roles">
+            </p-multiSelect>
         </div>
     </div>
     <div class="grid p-fluid">
