--- a/src/app/components/dashboard/finanzas/efectivo/efectivo/efectivo.component.html
+++ b/src/app/components/dashboard/finanzas/efectivo/efectivo/efectivo.component.html
@@ -1,4 +1,4 @@
-<p-button *appRole="['CAJERO']" label="Regresar" (click)="regresar()"></p-button>
+<p-button *appRole="['ADMIN']" label="Regresar" (click)="regresar()"></p-button>
 <h2>
     CUENTAS EN EFECTIVO
 </h2>
@@ -11,7 +11,7 @@
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
                 EFECTIVO
-                <p-button *appRole="['ADMIN']" (click)="crearCuentaEfectivo()" icon="pi pi-plus-circle"></p-button>
+                <p-button *appRole="['ADMIN', 'COMPRAS']" (click)="crearCuentaEfectivo()" icon="pi pi-plus-circle"></p-button>
             </div>
         </ng-template>
         <ng-template pTemplate="header">
