--- a/src/app/components/dashboard/ventas/cliente/cliente-form/cliente-form.component.html
+++ b/src/app/components/dashboard/ventas/cliente/cliente-form/cliente-form.component.html
@@ -63,7 +63,7 @@
                                     </mat-error>
                              </mat-form-field>
                         </div>
-                        <div class="form-group col-md-1" ng>
+                        <div class="form-group col-md-1" ng *appRole="['PENDIENTE']">
                             <mat-checkbox class="example-margin" formControlName="credit">Credito</mat-checkbox>
                         </div>
                         <div formArrayName="credito"  *ngIf="service.form.controls.credit.value">
