--- a/src/app/components/dashboard/compras/pago-form/pago-form.component.html
+++ b/src/app/components/dashboard/compras/pago-form/pago-form.component.html
@@ -66,7 +66,7 @@
                             <span>{{item.nombre}}  Q. {{item.detalleEfectivo[0].balance}}</span>
                         </ng-template>
                     </p-dropdown>
-                    <small *ngIf="pagoService.form.get('efectivo')?.invalid" class="p-error block">Debe seleccionar una cuenta en efectivo</small>
+                    <small *ngIf=" pagoService.form.get('efectivo')?.touched && pagoService.form.get('efectivo')?.invalid" class="p-error block">Debe seleccionar una cuenta en efectivo</small>
                 </div>
             </div>
             <div class="p-fluid grid">
